--- a/index.html
+++ b/index.html
@@ -546,29 +546,26 @@
 
   <h1 class="hero-oval__name hero-oval__name--top">SEUNGMOK</h1>
 
+  <!-- 장소 텍스트 (이미지 위쪽으로 이동) -->
+  <div class="hero-center hero-center--top">
+    <span class="hero-side__label">PLACE</span>
+    <span class="hero-side__dot"></span>
+    <span class="hero-side__text">소풍컨벤션웨딩홀 7층 베일리홀</span>
+  </div>
+
   <div class="hero-oval__frame">
-    <!-- 대표 사진 경로만 바꾸면 됨 -->
     <img src="img/header.jpg" alt="" class="hero-oval__img no-actions">
+  </div>
+
+  <!-- 날짜 텍스트 (이미지 아래쪽으로 이동) -->
+  <div class="hero-center hero-center--bottom">
+    <span class="hero-side__label">DATE</span>
+    <span class="hero-side__dot"></span>
+    <span class="hero-side__text">2025년 11월 8일 토요일 18시 30분</span>
   </div>
 
   <h1 class="hero-oval__name hero-oval__name--bottom">HOSEON</h1>
 
-  <!-- 좌측: 날짜/시간 -->
-<div class="hero-side hero-side--left">
-  <span class="hero-side__label">DATE</span>
-  <span class="hero-side__dot"></span>
-  <span class="hero-side__text">
-    2025년 11월 8일 토요일 오후 6시 30분
-  </span>
-</div>
-
-<div class="hero-side hero-side--right">
-  <span class="hero-side__label">PLACE</span>
-  <span class="hero-side__dot"></span>
-  <span class="hero-side__text">
-    소풍컨벤션웨딩홀 7층 베일리홀
-  </span>
-</div>
 </section>
         <!-- <header class="inner cover cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         </header> -->
