--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 <p class="section1-title section1-sub">
                     사랑으로 물들어가는 계절,<br />
                     연인에서 부부라는 이름으로<br />
-                    평생을 함께 하고자 합니다.<br />
+                    평생을 함께 하고자 합니다.<br /><br />
                     귀한 걸음 하시어<br />
                     두 사람의 언약을 지켜봐 주시면<br />
                     더 없는 기쁨으로 간직하겠습니다.
