--- a/index.html
+++ b/index.html
@@ -1260,23 +1260,23 @@
             { thumb: 'img/thumbs/1.jpg', full: 'img/1.jpg' },
             { thumb: 'img/thumbs/2.jpg', full: 'img/2.jpg' },
             { thumb: 'img/thumbs/3.jpg', full: 'img/3.jpg' },
-            { thumb: 'img/thumbs/4.jpg', full: 'img/4.jpg' },
+            // { thumb: 'img/thumbs/4.jpg', full: 'img/4.jpg' },
             { thumb: 'img/thumbs/5.jpg', full: 'img/5.jpg' },
-            { thumb: 'img/thumbs/6.jpg', full: 'img/6.jpg' },
+            // { thumb: 'img/thumbs/6.jpg', full: 'img/6.jpg' },
             { thumb: 'img/thumbs/7.jpg', full: 'img/7.jpg' },
-            { thumb: 'img/thumbs/8.jpg', full: 'img/8.jpg' },
+            // { thumb: 'img/thumbs/8.jpg', full: 'img/8.jpg' },
             { thumb: 'img/thumbs/9.jpg', full: 'img/9.jpg' },
             { thumb: 'img/thumbs/10.jpg', full: 'img/10.jpg' },
-            { thumb: 'img/thumbs/11.jpg', full: 'img/11.jpg' },
+            // { thumb: 'img/thumbs/11.jpg', full: 'img/11.jpg' },
             { thumb: 'img/thumbs/12.jpg', full: 'img/12.jpg' },
-            { thumb: 'img/thumbs/13.jpg', full: 'img/13.jpg' },
-            { thumb: 'img/thumbs/14.jpg', full: 'img/14.jpg' },
+            // { thumb: 'img/thumbs/13.jpg', full: 'img/13.jpg' },
+            // { thumb: 'img/thumbs/14.jpg', full: 'img/14.jpg' },
             { thumb: 'img/thumbs/15.jpg', full: 'img/15.jpg' },
             { thumb: 'img/thumbs/16.jpg', full: 'img/16.jpg' },
-            { thumb: 'img/thumbs/17.jpg', full: 'img/17.jpg' },
-            { thumb: 'img/thumbs/18.jpg', full: 'img/18.jpg' },
+            // { thumb: 'img/thumbs/17.jpg', full: 'img/17.jpg' },
+            // { thumb: 'img/thumbs/18.jpg', full: 'img/18.jpg' },
             { thumb: 'img/thumbs/19.jpg', full: 'img/19.jpg' },
-            { thumb: 'img/thumbs/20.jpg', full: 'img/20.jpg' },
+            // { thumb: 'img/thumbs/20.jpg', full: 'img/20.jpg' },
             { thumb: 'img/thumbs/21.jpg', full: 'img/21.jpg' }
         ];
 
