--- a/index.html
+++ b/index.html
@@ -1133,15 +1133,17 @@
                                         <span class="parking-badge parking-badge--pulse" role="text"
                                             aria-label="건물 내 3시간 무료 주차">
                                             <!-- 아이콘: 차 + 시계 (SVG, 이모지 대체 가능) -->
-                                            <svg viewBox="0 0 24 24" fill="none" stroke="#5a3b00" stroke-width="2"
+                                            <!-- <svg viewBox="0 0 24 24" fill="none" stroke="#5a3b00" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
                                                 <path d="M3 13l2-5a2 2 0 0 1 2-1h6a2 2 0 0 1 2 1l2 5" />
                                                 <circle cx="7.5" cy="16.5" r="1.8" />
                                                 <circle cx="16.5" cy="16.5" r="1.8" />
                                                 <path d="M12 3v4m0 0h3" />
-                                            </svg>
+                                            </svg> -->
                                             <span><b>건물 내</b> <span class="em">3시간 무료주차</span></span>
                                         </span>
+                                        <br />
+                                        &nbsp;&nbsp;&nbsp;👉🏻 약 <b>2500대</b> 주차 가능 - <b>7층에서 주차권</b> 받아가세요 :)<br />
                                     </div>
 
                                     <!-- SOPPOONG 스타일 주차안내 카드 -->
