--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,9 @@
                                             <thead>
                                                 <tr>
                                                     <th style="width:28%;">주차장</th>
-                                                    <th>지하 1층</th>
-                                                    <th>지하 2층</th>
-                                                    <th>지하 3층</th>
+                                                    <th>B1층</th>
+                                                    <th>B2층</th>
+                                                    <th>B3층</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -1170,15 +1170,15 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-                                        <div class="parking-note">7층 전용 엘리베이터 <b>20, 21, 22호기</b> 이용 바랍니다.</div>
+                                        <div class="parking-note">7층 전용 엘리베이터: <b>20, 21, 22호기</b></div>
 
                                         <!-- 테이블 2 -->
                                         <table class="parking-table">
                                             <thead>
                                                 <tr>
                                                     <th>주차장</th>
-                                                    <th>지하 2층</th>
-                                                    <th>지하 3층</th>
+                                                    <th>B2층</th>
+                                                    <th>B3층</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -1189,7 +1189,7 @@
                                                 </tr>
                                             </tbody>
                                         </table>
-                                        <div class="parking-note">7층 전용 엘리베이터 <b>17, 18호기</b> 이용 바랍니다.</div>
+                                        <div class="parking-note">7층 전용 엘리베이터: <b>17, 18호기</b></div>
 
                                         <div class="parking-footer">기둥번호를 꼭 확인하시고 주차하시기 바랍니다.</div>
                                     </div>
